unpackaged/main/default/objects/Gong__Gong_Scorecard__c/fields/Gong__Answer_Formula__c.field-meta.xml
<CustomField>
    <fullName>Gong__Answer_Formula__c</fullName>
    <formula>IF(ISPICKVAL( Gong__Scorecard_Question_Type__c , &#39;RANGE&#39;),IF(Gong__Scorecard_Question_Answer_Text__c==&#39;Not answered&#39;,&#39;Not Answered&#39;,IF(Gong__Scorecard_Question_Answer_Text__c==&#39;NA&#39;,&#39;NA&#39;,IMAGE( &#39;/resource/Gong__&#39; &amp; Gong__Scorecard_Question_Answer_Text__c , Gong__Scorecard_Question_Answer_Text__c )) ), Gong__Scorecard_Question_Answer_Text__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answer</label>
    <type>Text</type>
</CustomField>