unpackaged/main/default/objects/Gong__Gong_Scorecard__c/fields/Gong__Minimum_range_formula__c.field-meta.xml
<CustomField>
    <fullName>Gong__Minimum_range_formula__c</fullName>
    <description>This formula field comes to support previous versions where the Minimum range value field was&#39;nt exists. This formula will treat Blanks as 1</description>
    <formula>IF( ISBLANK( Gong__Scorecard_Question_Range_Min__c ) , 1,  Gong__Scorecard_Question_Range_Min__c )</formula>
    <label>Minimum range formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>