unpackaged/main/default/objects/Gong__Gong_Scorecard__c/fields/Gong__Scorecard_Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Gong__Scorecard_Question_Type__c</fullName>
    <label>Question type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOOLEAN</fullName>
            </value>
            <value>
                <fullName>OPEN</fullName>
            </value>
            <value>
                <fullName>RANGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>